--- a/visualiser/src/main/resources/FXML/RaceView.fxml
+++ b/visualiser/src/main/resources/FXML/RaceView.fxml
@@ -23,9 +23,9 @@
 
                                                     <TableView fx:id="positionTable" layoutX="-1.0" maxWidth="255.0" minWidth="248" prefHeight="491.0" prefWidth="249.0">
                                 <columns>
-                                    <TableColumn fx:id="positionCol" maxWidth="31.0" prefWidth="20.0" sortable="false" />
-                                    <TableColumn fx:id="nameCol" maxWidth="200.0" prefWidth="150.0" sortable="false" text="Name" />
-                                    <TableColumn fx:id="speedCol" maxWidth="200.0" prefWidth="73.0" sortable="false" text="Speed" />
+                                    <TableColumn fx:id="legCol" maxWidth="65.0" prefWidth="37.0" text="Leg" />
+                                    <TableColumn fx:id="nameCol" maxWidth="200.0" minWidth="0.0" prefWidth="144.0" sortable="false" text="Name" />
+                                    <TableColumn fx:id="speedCol" maxWidth="240.0" minWidth="0.0" prefWidth="67.0" sortable="false" text="Speed" />
                                 </columns>
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
