Any number of spectators can now select boats from the positions table, and then zoom as if they were a racer. The finishing page no longer has "You finished XXX" on it.
#pair[tjg73, jtr44]

#story[1254]

--- a/visualiser/src/main/resources/FXML/FinishingPage.fxml
+++ b/visualiser/src/main/resources/FXML/FinishingPage.fxml
@@ -18,7 +18,7 @@
          <children>
             <AnchorPane prefHeight="200.0" prefWidth="200.0">
                <children>
-                  <Label alignment="CENTER" layoutX="245.0" layoutY="40.0" text="Congratulations you finished XXX" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                  <Label alignment="CENTER" layoutX="245.0" layoutY="40.0" text="Congratulations you finished the race!" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
