--- a/visualiser/src/main/resources/FXML/RaceView.fxml
+++ b/visualiser/src/main/resources/FXML/RaceView.fxml
@@ -39,7 +39,7 @@
         </AnchorPane>
     </left>
     <center>
-       <AnchorPane fx:id="viewAnchorPane" style="-fx-background-color: #a3ccff;" BorderPane.alignment="CENTER">
+       <AnchorPane fx:id="viewAnchorPane" BorderPane.alignment="CENTER">
             <children>
             <Group fx:id="boundaryGroup" autoSizeChildren="false" />
                 <Group fx:id="group" autoSizeChildren="false" />
