--- a/visualiser/src/main/resources/CSS/GeneralStyle.css
+++ b/visualiser/src/main/resources/CSS/GeneralStyle.css
@@ -9,6 +9,7 @@
     -fx-border-radius: 0px;
     -fx-background-radius: 0px;
     -fx-background: #20b176;
+    -fx-text-fill: white;
 }
 
 .table-view{
