--- a/visualiser/src/main/resources/FXML/StartingPage.fxml
+++ b/visualiser/src/main/resources/FXML/StartingPage.fxml
@@ -1,48 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.*?>
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.*?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@../CSS/GeneralStyle.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seng302.Controllers.StartController">
-
    <children>
-      <Button fx:id="connectBtn" layoutX="359.0" layoutY="349.0" mnemonicParsing="false" onAction="#connect" text="Connect" />
-      <TextField fx:id="ipField" layoutX="322.0" layoutY="311.0" prefHeight="25.0" prefWidth="143.0" />
-      <Text layoutX="267.0" layoutY="215.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: WHITE;" text="SAIL" wrappingWidth="209.22724437713623">
-         <font>
-            <Font name="Century Gothic" size="90.0" />
-         </font>
-      </Text>
-      <Text layoutX="4.0" layoutY="593.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: WHITE;" text="Developed by Full Mast" />
-      <Text layoutX="297.0" layoutY="328.0" strokeType="OUTSIDE" fx:id="ipLabel" strokeWidth="0.0" style="-fx-fill: WHITE;" text="IP:" />
-      <Label fx:id="statusLbl" alignment="CENTER" layoutX="309.0" layoutY="379.0" prefHeight="15.0" prefWidth="171.0" />
-      <Text layoutX="469.0" layoutY="215.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: WHITE;" text="LTS" wrappingWidth="44.22724437713623">
-         <font>
-            <Font name="Century Gothic" size="24.0" />
-         </font>
-      </Text>
-      <!--<RadioButton fx:id="RaceModeRadioButton" layoutX="320.0" layoutY="283.0" mnemonicParsing="false" selected="true" text="Race" />-->
-      <!--<RadioButton fx:id="PracticeModeRadioButton" layoutX="390.0" layoutY="283.0" mnemonicParsing="false" text="Practice" />-->
-      <!--<RadioButton fx:id="AgarModeRadioButton" layoutX="427.0" layoutY="283.0" mnemonicParsing="false" text="Agar" />-->
-      <!--<Button fx:id="practiceBtn" layoutX="329.0" layoutY="403.0" mnemonicParsing="false" onAction="#practiceClick" text="Practice Pre-Start" />-->
-
-
-      <RadioButton fx:id="RaceModeRadioButton" layoutX="285.0" layoutY="283.0" mnemonicParsing="false" selected="true" text="Race" />
-      <RadioButton fx:id="AgarModeRadioButton" layoutX="359.0" layoutY="283.0" mnemonicParsing="false" text="Agar" />
-      <RadioButton fx:id="PracticeModeRadioButton" layoutX="427.0" layoutY="283.0" mnemonicParsing="false" text="Practice" />
+      <Text fx:id="fullMastText" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: WHITE;" text="Developed by Full Mast" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0" />
+      <JFXTogglePane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0">
+            
+                                 <children>
+                  <Text layoutX="277.0" layoutY="215.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: WHITE;" text="SAIL" wrappingWidth="209.22724437713623">
+                     <font>
+                        <Font name="Century Gothic" size="90.0" />
+                     </font>
+                  </Text>
+                  <Label fx:id="statusLbl" alignment="CENTER" layoutX="309.0" layoutY="468.0" prefHeight="15.0" prefWidth="171.0" />
+                  <Text layoutX="479.0" layoutY="215.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: WHITE;" text="LTS" wrappingWidth="44.22724437713623">
+                     <font>
+                        <Font name="Century Gothic" size="24.0" />
+                     </font>
+                  </Text>
+                  <JFXButton fx:id="connectBtn" layoutX="317.0" layoutY="430.0" onAction="#connect" prefHeight="36.0" prefWidth="152.0" text="Connect" />
+                  <JFXRadioButton fx:id="RaceModeRadioButton" layoutX="195.0" layoutY="349.0" selected="true" text="Race" />
+                  <JFXRadioButton fx:id="AgarModeRadioButton" layoutX="276.0" layoutY="349.0" text="Agar" />
+                  <JFXRadioButton fx:id="PracticeModeRadioButton" layoutX="355.0" layoutY="349.0" prefHeight="15.0" prefWidth="102.0" text="Practice" />
+                  <JFXTextField fx:id="ipField" focusColor="WHITE" labelFloat="true" layoutX="273.0" layoutY="385.0" prefHeight="36.0" prefWidth="144.0" promptText="IP" unFocusColor="#464646" />
+                  <JFXRadioButton fx:id="CustomModeRadioButton" layoutX="457.0" layoutY="349.0" prefHeight="15.0" prefWidth="102.0" text="Custom Race" />
+                  <JFXTextField fx:id="portField" focusColor="WHITE" labelFloat="true" layoutX="427.0" layoutY="385.0" prefHeight="36.0" prefWidth="87.0" promptText="Port" unFocusColor="#464646" />
+               </children>
+            </AnchorPane>
+         </children>
+      </JFXTogglePane>
    </children>
 </AnchorPane>
