Added images to the resources to have background images
#story[1353]

--- a/visualiser/src/main/resources/CSS/GeneralStyle.css
+++ b/visualiser/src/main/resources/CSS/GeneralStyle.css
@@ -58,3 +58,7 @@
     -fx-background-insets: 0;
     -fx-background-radius: 1;
 }
+
+#startAnchor {
+    -fx-background-image: url("../BackgroundImages/render.png");
+}
