Reduced to two images, left two images in resources to decide between.
#story[1353]

--- a/visualiser/src/main/resources/CSS/GeneralStyle.css
+++ b/visualiser/src/main/resources/CSS/GeneralStyle.css
@@ -61,5 +61,7 @@
 }
 
 #startAnchor {
-    -fx-background-image: url("../BackgroundImages/render.png");
+    -fx-background-image: url("../BackgroundImages/north_wind_blows.jpg");
+    -fx-background-repeat: no-repeat;
+    -fx-background-size: stretch;
 }
