--- a/visualiser/src/main/resources/CSS/GeneralStyle.css
+++ b/visualiser/src/main/resources/CSS/GeneralStyle.css
@@ -12,50 +12,132 @@
     -fx-text-fill: white;
 }
 
-.table-view{
-    -fx-background-color: #007a49;
+/*.table-view{*/
+    /*-fx-background-color: #007a49;*/
+/*}*/
+
+/*.table-view:focused{*/
+    /*-fx-background-color: #007a49;*/
+/*}*/
+
+/*.table-view .column-header-background{*/
+    /*-fx-background-color: #20b176;*/
+/*}*/
+
+/*.table-view .column-header-background .label{*/
+    /*-fx-background-color: transparent;*/
+    /*-fx-text-fill: black;*/
+/*}*/
+
+/*.table-view .column-header {*/
+    /*-fx-background-color: transparent;*/
+/*}*/
+
+/*.table-view .table-cell{*/
+    /*-fx-text-fill: black;*/
+    /*-fx-border-color: transparent;*/
+/*}*/
+
+/*.table-row-cell{*/
+    /*-fx-background-color: -fx-table-cell-border-color, #4686ba;*/
+    /*-fx-border-color: transparent;*/
+    /*-fx-table-cell-border-color: transparent;*/
+    /*-fx-padding: 0.0em; !* 0 *!*/
+    /*-fx-text-alignment: center;*/
+/*}*/
+
+/*.table-row-cell:odd{*/
+    /*-fx-background-color: -fx-table-cell-border-color, #6ea3ce;*/
+    /*-fx-border-color: transparent;*/
+    /*-fx-table-cell-border-color: transparent;*/
+    /*-fx-padding: 0.0em; !* 0 *!*/
+    /*-fx-text-alignment: center;*/
+/*}*/
+
+/*.table-row-cell:selected {*/
+    /*-fx-background-color: #438496;*/
+    /*-fx-background-insets: 0;*/
+    /*-fx-background-radius: 1;*/
+/*}*/
+
+
+/* ----------------------------------------------------------------------------------------------------------------------*/
+
+
+.tree-table-view{
+    -fx-tree-table-color: rgba(0, 150, 0, 0.8);
+    -fx-tree-table-rippler-color : rgba(255, 0, 0, 0.9);
 }
 
-.table-view:focused{
-    -fx-background-color: #007a49;
+.tree-table-view:focused .tree-table-row-cell:selected {
+    -fx-background-color: -fx-tree-table-color  ;
+    -fx-table-cell-border-color: -fx-tree-table-color;
 }
 
-.table-view .column-header-background{
-    -fx-background-color: #20b176;
+
+.tree-table-view:focused .tree-table-row-cell:selected .tree-table-cell{
+    -fx-text-fill: white;
 }
 
-.table-view .column-header-background .label{
-    -fx-background-color: transparent;
-    -fx-text-fill: black;
+.tree-table-view .jfx-rippler {
+    -fx-rippler-fill: -fx-tree-table-rippler-color;
 }
 
-.table-view .column-header {
-    -fx-background-color: transparent;
+.tree-table-view .column-header ,
+.tree-table-view .column-header-background,
+.tree-table-view .column-header-background .filler{
+    -fx-background-color:TRANSPARENT;
 }
 
-.table-view .table-cell{
-    -fx-text-fill: black;
-    -fx-border-color: transparent;
+.tree-table-view .column-header{
+    -fx-border-width : 0 0 0 1;
+    -fx-border-color: #F3F3F3;
 }
 
-.table-row-cell{
-    -fx-background-color: -fx-table-cell-border-color, #4686ba;
-    -fx-border-color: transparent;
-    -fx-table-cell-border-color: transparent;
-    -fx-padding: 0.0em; /* 0 */
-    -fx-text-alignment: center;
+.tree-table-view .column-header .label {
+    -fx-text-fill : #949494;
+    -fx-padding : 16 0 16 0 ;
 }
 
-.table-row-cell:odd{
-    -fx-background-color: -fx-table-cell-border-color, #6ea3ce;
-    -fx-border-color: transparent;
-    -fx-table-cell-border-color: transparent;
-    -fx-padding: 0.0em; /* 0 */
-    -fx-text-alignment: center;
+.tree-table-view .column-header .arrow, .tree-table-view .column-header .sort-order-dot{
+    -fx-background-color : #949494;
 }
 
-.table-row-cell:selected {
-    -fx-background-color: #438496;
-    -fx-background-insets: 0;
-    -fx-background-radius: 1;
+.tree-table-view .column-header:last-visible {
+    -fx-border-width: 0 1 0 1;
+}
+
+.tree-table-view .column-header-background{
+    -fx-border-width : 0 0.0 1 0;
+    -fx-border-color:#F3F3F3;
+}
+
+.tree-table-view .tree-table-cell{
+    -fx-border-width:0 0 0 0;
+    -fx-padding : 16 0 16 0 ;
+}
+
+.tree-table-view .column-overlay{
+    -fx-background-color: -fx-tree-table-color;
+}
+
+.tree-table-view .column-resize-line, .tree-table-view .column-drag-header{
+    -fx-background-color: -fx-tree-table-rippler-color;
+}
+
+.tree-table-view:focused {
+    -fx-background-color: transparent,-fx-box-border,-fx-control-inner-background;
+    -fx-background-insets: -1.4, 0, 1;
+    -fx-background-radius: 1.4, 0, 0;
+    /*....*/
+    -fx-padding: 1; /* 0.083333em; */
+}
+
+.tree-table-row-cell > .tree-disclosure-node > .arrow {
+    -fx-background-color: -fx-text-fill;
+    -fx-padding: 0.333333em 0.229em 0.333333em 0.229em; /* 4 */
+    -fx-shape: "M 0 -3.5 L 4 0 L 0 3.5 z";
+}
+.tree-table-row-cell .jfx-text-field{
+    -fx-focus-color: rgba(240,40,40, 1);
 }
