--- a/visualiser/src/main/resources/FXML/FinishingPage.fxml
+++ b/visualiser/src/main/resources/FXML/FinishingPage.fxml
@@ -5,6 +5,8 @@
 <?import javafx.scene.layout.*?>
 
 <?import javafx.scene.text.Font?>
+<?import com.jfoenix.controls.JFXTreeTableView?>
+<?import com.jfoenix.controls.JFXButton?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seng302.Controllers.FinishingController">
    <children>
       <GridPane layoutX="151.0" layoutY="144.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -27,21 +29,27 @@
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                <children>
-                  <TableView fx:id="finishersTable" layoutX="194.0" layoutY="60.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="0.0">
-                    <columns>
-                      <TableColumn fx:id="positionColumn" prefWidth="75.0" text="Position" />
-                      <TableColumn fx:id="boatColumn" prefWidth="75.0" text="Boat Name" />
-                        <TableColumn fx:id="finishTimeColumn" prefWidth="75.0" text="Finish Time" />
-                    </columns>
+                   <JFXTreeTableView fx:id="finishersTable1" layoutX="194.0" layoutY="60.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="0.0">
+
                      <columnResizePolicy>
-                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                      </columnResizePolicy>
-                  </TableView>
+                   </JFXTreeTableView>
+                   <!--<TableView fx:id="finishersTable" layoutX="194.0" layoutY="60.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="0.0">-->
+                    <!--<columns>-->
+                      <!--<TableColumn fx:id="positionColumn" prefWidth="75.0" text="Position" />-->
+                      <!--<TableColumn fx:id="boatColumn" prefWidth="75.0" text="Boat Name" />-->
+                        <!--<TableColumn fx:id="finishTimeColumn" prefWidth="75.0" text="Finish Time" />-->
+                    <!--</columns>-->
+                     <!--<columnResizePolicy>-->
+                        <!--<TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />-->
+                     <!--</columnResizePolicy>-->
+                  <!--</TableView>-->
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
                <children>
-                  <Button fx:id="exitToMenuBtn" layoutX="524.0" layoutY="8.0" mnemonicParsing="false" onAction="#exitToMenu" text="Exit to Menu" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
+                  <JFXButton fx:id="exitToMenuBtn" layoutX="524.0" layoutY="8.0" mnemonicParsing="false" onAction="#exitToMenu" text="Exit to Menu" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
                </children>
             </AnchorPane>
          </children>
