--- a/visualiser/src/main/resources/FXML/FinishingPage.fxml
+++ b/visualiser/src/main/resources/FXML/FinishingPage.fxml
@@ -24,7 +24,8 @@
                    <Label alignment="CENTER" layoutX="245.0" layoutY="40.0" text="You have finished the race!" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                        <font>
                            <Font name="Century Gothic" size="32.0" />
-                       </font></Label>
+                       </font>
+                   </Label>
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
