Added the background to the start screen. Reduced the opacity.
Signed-off-by: Ollie Robb <osr13@uclive.ac.nz>

#pair[osr13, tjg73]
#story[1360]

--- a/visualiser/src/main/resources/CSS/GeneralStyle.css
+++ b/visualiser/src/main/resources/CSS/GeneralStyle.css
@@ -111,6 +111,7 @@
     -fx-background-image: url("../BackgroundImages/north_wind_blows.jpg");
     -fx-background-repeat: no-repeat;
     -fx-background-size: stretch;
+    -fx-opacity: 0.7;
 }
 
 .tree-table-view .column-header-background{
