--- a/visualiser/src/main/resources/FXML/RaceView.fxml
+++ b/visualiser/src/main/resources/FXML/RaceView.fxml
@@ -1,17 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import java.lang.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.chart.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.chart.LineChart?>
-<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.Group?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-
 <BorderPane fx:id="mainBorderPane" maxHeight="770.0" maxWidth="1208.0" minHeight="600.0" minWidth="800.0" prefHeight="728.0" prefWidth="1206.0" stylesheets="@../CSS/GeneralStyle.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <left>
         <AnchorPane maxWidth="248" minWidth="248" prefWidth="248">
