--- a/visualiser/src/main/resources/FXML/StartingPage.fxml
+++ b/visualiser/src/main/resources/FXML/StartingPage.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.*?>
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import com.jfoenix.controls.JFXToggleButton?>
@@ -10,7 +16,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@../CSS/GeneralStyle.css" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seng302.Controllers.StartController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@../CSS/GeneralStyle.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seng302.Controllers.StartController">
     <children>
         <Text fx:id="fullMastText" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: WHITE;" text="Developed by Full Mast" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0" />
         <JFXTogglePane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -19,18 +25,18 @@
                 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0">
 
                     <children>
-                        <Label fx:id="statusLbl" alignment="CENTER" layoutX="309.0" layoutY="468.0" prefHeight="15.0" prefWidth="171.0" />
+                        <Label fx:id="statusLbl" alignment="CENTER" layoutX="309.0" layoutY="486.0" prefHeight="15.0" prefWidth="171.0" />
                   <ImageView fitHeight="162.0" fitWidth="407.0" layoutX="193.0" layoutY="115.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../Logo/SailIOLogo.png" />
                      </image></ImageView>
-                        <JFXButton fx:id="connectBtn" layoutX="317.0" layoutY="438.0" onAction="#connect" prefHeight="36.0" prefWidth="152.0" text="Connect" />
-                        <JFXTextField fx:id="ipField" focusColor="WHITE" labelFloat="true" layoutX="273.0" layoutY="393.0" prefHeight="36.0" prefWidth="144.0" promptText="IP" unFocusColor="#464646" />
-                        <JFXTextField fx:id="portField" focusColor="WHITE" labelFloat="true" layoutX="427.0" layoutY="393.0" prefHeight="36.0" prefWidth="87.0" promptText="Port" unFocusColor="#464646" />
-                        <JFXToggleButton fx:id="RaceModeButton" layoutX="166.0" layoutY="320.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="107.0" text="Race" />
-                        <JFXToggleButton fx:id="AgarModeButton" layoutX="273.0" layoutY="320.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="107.0" text="Agar" />
-                        <JFXToggleButton fx:id="PracModeButton" layoutX="380.0" layoutY="320.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="130.0" text="Practice" />
-                        <JFXToggleButton fx:id="CustModeButton" layoutX="510.0" layoutY="320.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="122.0" text="Custom" />
+                        <JFXButton fx:id="connectBtn" layoutX="317.0" layoutY="445.0" onAction="#connect" prefHeight="36.0" prefWidth="152.0" text="Connect" />
+                        <JFXTextField fx:id="ipField" focusColor="WHITE" labelFloat="true" layoutX="273.0" layoutY="400.0" prefHeight="36.0" prefWidth="144.0" promptText="IP" unFocusColor="#464646" />
+                        <JFXTextField fx:id="portField" focusColor="WHITE" labelFloat="true" layoutX="427.0" layoutY="400.0" prefHeight="36.0" prefWidth="87.0" promptText="Port" unFocusColor="#464646" />
+                        <JFXToggleButton fx:id="RaceModeButton" alignment="CENTER_LEFT" layoutX="60.0" layoutY="320.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="170.0" text="  Race" />
+                        <JFXToggleButton fx:id="AgarModeButton" alignment="CENTER_LEFT" layoutX="230.0" layoutY="320.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="170.0" text="  Agar" />
+                        <JFXToggleButton fx:id="PracModeButton" alignment="CENTER_LEFT" layoutX="400.0" layoutY="320.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="170.0" text="Practice" />
+                        <JFXToggleButton fx:id="CustModeButton" alignment="CENTER_LEFT" layoutX="570.0" layoutY="320.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="170.0" text=" Custom" />
                     </children>
                 </AnchorPane>
             </children>
