Decreased opacity of start button when no race mode is selected
#story[1360]

--- a/visualiser/src/main/resources/CSS/GeneralStyle.css
+++ b/visualiser/src/main/resources/CSS/GeneralStyle.css
@@ -36,6 +36,12 @@
     -fx-opacity: 0.9;
 }
 
+#connectBtn:disabled {
+    -fx-background-color: rgba(40, 109, 168, 0.9);
+    -fx-text-fill: white;
+    -fx-opacity: 0.5;
+}
+
 .jfx-toggle-button {
     -jfx-toggle-color: transparent;
     -jfx-untoggle-color: transparent;
